--- a/public/layout.scss
+++ b/public/layout.scss
@@ -96,3 +96,17 @@
     margin: 5px;
     padding: 8px;
 }
+
+// Prayer
+.prayer-main{
+    background-color: #69f0c5;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100px;
+    width: 100%;
+}
+.py-title{
+    padding: 30px;
+    text-align: center;
+}
