--- a/public/button.scss
+++ b/public/button.scss
@@ -55,3 +55,12 @@
     border-color: #315449;
     background-color: #315449;
 }
+.botn-py{
+    color: #69f0c5;
+    border-color: #69f0c5;
+}
+.botn-py:hover{
+    color: #f5ebde;
+    border-color: #69f0c5;
+    background-color: #69f0c5;
+}
