--- a/public/layout.scss
+++ b/public/layout.scss
@@ -43,6 +43,13 @@
     padding-left: 20px;
     padding: 8px;
 }
+.img-pg{
+    max-width: auto;
+    height: 230px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding: 8px;
+}
 .see-botn{
     margin: 10px;
     text-align: center;
