--- a/public/style.css
+++ b/public/style.css
@@ -245,6 +245,14 @@
   padding: 8px;
 }
 
+.img-pg {
+  max-width: auto;
+  height: 230px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding: 8px;
+}
+
 .see-botn {
   margin: 10px;
   text-align: center;
