--- a/public/style.css
+++ b/public/style.css
@@ -359,3 +359,55 @@
   font-size: 13px;
   font-weight: bold;
 }
+
+.verse-main {
+  background-color: #bbedf4;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100px;
+  width: 100%;
+}
+
+.vs-title {
+  padding: 30px;
+  text-align: center;
+}
+
+.verse-contant {
+  background-size: cover;
+  height: 230px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.img-verse {
+  width: 250px;
+  height: 200px;
+  padding: 1px;
+  border: 2px solid #aadfe6;
+  border-radius: 3px;
+  margin: 15px 18px;
+  background-color: #aadfe6;
+}
+
+.img-verse:hover {
+  -webkit-transition: 1200ms;
+  transition: 1200ms;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.verse-banner {
+  text-align: center;
+}
+
+.img-vs-card {
+  width: 250px;
+  height: 180px;
+  padding: 1px;
+  border: 2px solid #aadfe6;
+  border-radius: 3px;
+  margin: 10px;
+  background-color: #aadfe6;
+}
