--- a/public/fonts.scss
+++ b/public/fonts.scss
@@ -93,3 +93,13 @@
 .py-form-1{
     padding: 10px;
 }
+
+// Bible
+.vs-card-title{
+    h3{
+        font-size: 16px;
+        font-weight: bold;
+        margin-left: 10px;
+        padding: 5px;
+    }
+}
