--- a/public/button.scss
+++ b/public/button.scss
@@ -65,7 +65,7 @@
     background-color: #69f0c5;
 }
 // Bible
-.btn-vs{
+.btn-vs-title{
     display: inline-block;
     font-family: 'Source Serif Pro', serif;
     font-weight: bold;
@@ -85,15 +85,44 @@
     font-size: 14px;
     border-radius: .25rem;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    h3{
-        border-radius: 2px;
-        border: 1px solid #b1b0b0;
-        padding: 3px;
-    }
+}
+.btn-vs{
+    display: inline-block;
+    font-family: 'Source Serif Pro', serif;
+    font-weight: bold;
+    line-height: 1.5;
+    color: #dc3545;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 2px solid transparent;
+    padding: .375rem .75rem;
+    margin: 8px;
+    font-size: 14px;
+    border-radius: .25rem;
+    text-align: center;
+    width: 240px;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.bd{
+    border-radius: 2px;
+    border: 1px solid #b1b0b0;
+    padding: 10px;
 }
 .btn-vs-link{
-    color: #ff7582; border-color: #ff7582;
+    color: #9b424b; border-color: #9b424b;
 }
 .btn-vs-link:hover{
-    color: #f5ebde; border-color: #ff7582; background-color: #ff7582;
+    color: #f5ebde; border-color: #9b424b; background-color: #9b424b;
+}
+.btn-vs-link1{
+    color: #3d627a; border-color: #3d627a;
+}
+.btn-vs-link1:hover{
+    color: #f5ebde; border-color: #3d627a; background-color: #3d627a;
 }
