--- a/public/fonts.scss
+++ b/public/fonts.scss
@@ -95,11 +95,10 @@
 }
 
 // Bible
-.vs-card-title{
-    h3{
-        font-size: 16px;
-        font-weight: bold;
-        margin-left: 10px;
-        padding: 5px;
-    }
+
+.vs-h3{
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px;
+    padding: 5px;
 }
