--- a/public/style.css
+++ b/public/style.css
@@ -114,10 +114,10 @@
   padding: 10px;
 }
 
-.vs-card-title h3 {
-  font-size: 16px;
+.vs-h3 {
+  font-size: 20px;
   font-weight: bold;
-  margin-left: 10px;
+  margin: 10px;
   padding: 5px;
 }
 
@@ -202,7 +202,7 @@
   background-color: #69f0c5;
 }
 
-.btn-vs {
+.btn-vs-title {
   display: inline-block;
   font-family: "Source Serif Pro", serif;
   font-weight: bold;
@@ -227,21 +227,61 @@
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
 }
-.btn-vs h3 {
+
+.btn-vs {
+  display: inline-block;
+  font-family: "Source Serif Pro", serif;
+  font-weight: bold;
+  line-height: 1.5;
+  color: #dc3545;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+      user-select: none;
+  background-color: transparent;
+  border: 2px solid transparent;
+  padding: 0.375rem 0.75rem;
+  margin: 8px;
+  font-size: 14px;
+  border-radius: 0.25rem;
+  text-align: center;
+  width: 240px;
+  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+
+.bd {
   border-radius: 2px;
   border: 1px solid #b1b0b0;
-  padding: 3px;
+  padding: 10px;
 }
 
 .btn-vs-link {
-  color: #ff7582;
-  border-color: #ff7582;
+  color: #9b424b;
+  border-color: #9b424b;
 }
 
 .btn-vs-link:hover {
   color: #f5ebde;
-  border-color: #ff7582;
-  background-color: #ff7582;
+  border-color: #9b424b;
+  background-color: #9b424b;
+}
+
+.btn-vs-link1 {
+  color: #3d627a;
+  border-color: #3d627a;
+}
+
+.btn-vs-link1:hover {
+  color: #f5ebde;
+  border-color: #3d627a;
+  background-color: #3d627a;
 }
 
 .footer-title {
@@ -453,12 +493,8 @@
 
 .vs-card-contant {
   margin-top: 10px;
-}
-.vs-card-contant h3 {
-  font-size: 18px;
-  font-weight: bold;
-  margin: 10px;
-  padding: 5px;
+  border-bottom: 2px solid black;
+  padding-bottom: 10px;
 }
 
 .img-vs-card {
@@ -473,4 +509,9 @@
 
 .verse-contant-second {
   background-color: #c4c4c4;
+}
+
+.scroll-section {
+  max-height: 200px;
+  overflow-y: auto;
 }
