--- a/public/button.scss
+++ b/public/button.scss
@@ -126,3 +126,15 @@
 .btn-vs-link1:hover{
     color: #f5ebde; border-color: #3d627a; background-color: #3d627a;
 }
+.btn-vs-link2{
+    color: #7a3d7a; border-color: #7a3d7a;
+}
+.btn-vs-link2:hover{
+    color: #f5ebde; border-color: #7a3d7a; background-color: #7a3d7a;
+}
+.btn-vs-link3{
+    color: #4b7a3d; border-color: #4b7a3d;
+}
+.btn-vs-link3:hover{
+    color: #f5ebde; border-color: #4b7a3d; background-color: #4b7a3d;
+}
