--- a/public/fonts.scss
+++ b/public/fonts.scss
@@ -89,6 +89,23 @@
         padding: 5px;
     }
 }
+// Library
+.lb-title-h4{
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Source Serif Pro', serif;
+    color: #ef4b4c;
+}
+.lb-title-h5{
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'Source Serif Pro', serif;
+}
+.lb-title-h6{
+    font-size: 12px;
+    font-weight: bold;
+    font-family: 'Source Serif Pro', serif;
+}
 // Prayer
 .py-form-1{
     padding: 10px;
