--- a/public/layout.scss
+++ b/public/layout.scss
@@ -110,16 +110,8 @@
     margin: 15px;
     background-color: #aadfe6;
 }
-
-.lb-img{
-    display: inline;
-    max-width: 150px;
-    max-height: 180px;
-    padding: 1px;
-    border: 2px solid #494949;
-    border-radius: 3px;
-    margin: 10px;
-    background-color: #494949;
+.img-lb{
+    border: 1px solid #315449;
 }
 .lb-card-body{
     margin-top: 5px;
