--- a/public/button.css
+++ b/public/button.css
@@ -1,6 +1,7 @@
 .botn {
   display: inline-block;
-  font-weight: 400;
+  font-family: "Source Serif Pro", serif;
+  font-weight: bold;
   line-height: 1.5;
   color: #dc3545;
   text-align: center;
@@ -12,7 +13,7 @@
   -ms-user-select: none;
       user-select: none;
   background-color: transparent;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 14px;
   border-radius: 0.25rem;
@@ -23,12 +24,191 @@
 }
 
 .botn-donate {
-  color: #dc3545;
-  border-color: #dc3545;
+  color: #5fbf7f;
+  border-color: #5fbf7f;
 }
 
 .botn-donate:hover {
   color: #f5ebde;
   border-color: #5fbf7f;
   background-color: #5fbf7f;
+}
+
+.lib-sem {
+  color: #355c7d;
+  border-color: #355c7d;
+  width: 500px;
+}
+
+.lib-sem:hover {
+  color: #f5ebde;
+  border-color: #355c7d;
+  background-color: #355c7d;
+}
+
+.botn-link {
+  color: #ff7582;
+  border-color: #ff7582;
+}
+
+.botn-link:hover {
+  color: #f5ebde;
+  border-color: #ff7582;
+  background-color: #ff7582;
+}
+
+.botn-menu {
+  color: #315449;
+  border-color: #315449;
+}
+
+.botn-menu:hover {
+  color: #f5ebde;
+  border-color: #315449;
+  background-color: #315449;
+}
+
+.botn-py {
+  color: #69f0c5;
+  border-color: #69f0c5;
+}
+
+.botn-py:hover {
+  color: #f5ebde;
+  border-color: #69f0c5;
+  background-color: #69f0c5;
+}
+
+.btn-vs-title {
+  display: inline-block;
+  font-family: "Source Serif Pro", serif;
+  font-weight: bold;
+  line-height: 1.5;
+  color: #dc3545;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+      user-select: none;
+  background-color: transparent;
+  border: 2px solid transparent;
+  padding: 0.375rem 0.75rem;
+  margin: 5px;
+  font-size: 14px;
+  border-radius: 0.25rem;
+  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+
+.btn-vs {
+  display: inline-block;
+  font-family: "Source Serif Pro", serif;
+  font-weight: bold;
+  line-height: 1.5;
+  color: #dc3545;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+      user-select: none;
+  background-color: transparent;
+  border: 2px solid transparent;
+  padding: 0.375rem 0.75rem;
+  margin: 8px;
+  font-size: 14px;
+  border-radius: 0.25rem;
+  text-align: center;
+  width: 240px;
+  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+
+.bd {
+  border-radius: 2px;
+  border: 1px solid #b1b0b0;
+  padding: 10px;
+}
+
+.btn-vs-link {
+  color: #9b424b;
+  border-color: #9b424b;
+}
+
+.btn-vs-link:hover {
+  color: #f5ebde;
+  border-color: #9b424b;
+  background-color: #9b424b;
+}
+
+.btn-vs-link1 {
+  color: #3d627a;
+  border-color: #3d627a;
+}
+
+.btn-vs-link1:hover {
+  color: #f5ebde;
+  border-color: #3d627a;
+  background-color: #3d627a;
+}
+
+.btn-vs-link2 {
+  color: #7a3d7a;
+  border-color: #7a3d7a;
+}
+
+.btn-vs-link2:hover {
+  color: #f5ebde;
+  border-color: #7a3d7a;
+  background-color: #7a3d7a;
+}
+
+.btn-vs-link3 {
+  color: #4b7a3d;
+  border-color: #4b7a3d;
+}
+
+.btn-vs-link3:hover {
+  color: #f5ebde;
+  border-color: #4b7a3d;
+  background-color: #4b7a3d;
+}
+
+.lb-btn-ty {
+  font-size: 8px;
+  border: 1px solid #315449;
+  border-radius: 5px;
+  padding: 2px 8px;
+  margin-bottom: 10px;
+  background-color: #315449;
+  color: #dddddd;
+  text-decoration: none;
+  margin-right: 4px;
+}
+
+.lb-btn-ty:hover {
+  color: #dddddd;
+}
+
+.lb-btn-down {
+  font-size: 12px;
+  border: 1px solid #315449;
+  border-radius: 2px;
+  padding: 4px 10px;
+  font-weight: bold;
+  color: #315449;
+}
+
+.lb-btn-down:hover {
+  color: #dddddd;
+  background-color: #315449;
 }
