--- a/public/layout.css
+++ b/public/layout.css
@@ -1,7 +1,258 @@
 .footer-title {
+  margin-top: 2px;
+  border-top: 2px solid #aac9ce;
+  border-bottom: 2px solid #aac9ce;
+  padding: 10px 0;
+}
+
+.copy {
+  border-top: 2px solid #aac9ce;
+}
+
+.social {
+  border-left: 2px solid #aac9ce;
+  border-right: 2px solid #aac9ce;
+}
+
+.loyal-main {
+  background-size: cover;
+  background-color: #aac9ce;
+  background-repeat: no-repeat;
+  height: 400px;
+  width: 100%;
+  background-position: center;
+}
+
+.pg-title {
+  margin: 50px 10px;
+  padding: 15px;
+}
+.pg-title h1 {
+  font-family: "Bree Serif", serif;
+  color: #ef4b4c;
+}
+
+.contant {
+  background-color: #b6b4c2;
+  height: 200px;
+}
+
+.cnt-card {
+  margin-top: -25px;
+}
+
+.img {
+  max-width: 100%;
+  height: auto;
+  padding-left: 20px;
+  padding: 8px;
+}
+
+.img-pg {
+  max-width: auto;
+  height: 230px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding: 8px;
+}
+
+.see-botn {
+  margin: 10px;
   text-align: center;
 }
 
-.footer-ul {
+.second-contant {
+  background-color: #f3dbcf;
+}
+
+.library-free-main {
+  background-color: #f4bbbb;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100px;
+  width: 100%;
+}
+
+.lb-title {
+  padding: 30px;
+  text-align: center;
+}
+
+.library-free-contant {
+  padding-bottom: 20px;
+}
+
+.l-banner {
+  background-color: #aadfe6;
+  border: 1px solid #919191;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
+.lb-menu {
+  margin-bottom: 10px;
+  padding: 5px;
+  text-align: center;
+  border-bottom: 2px solid #315449;
+  border-top: 2px solid #315449;
+}
+.lb-menu ul {
+  display: inline;
+}
+.lb-menu li {
+  display: inline-block;
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
+  margin-left: 5px;
+  padding: 5px;
+}
+
+.lb-pagination {
+  margin: 5px;
+  padding: 8px;
+}
+
+.lb-card {
+  max-width: 300px;
+  padding: 1px;
+  border: 2px solid #aadfe6;
+  border-radius: 3px;
+  margin: 15px;
+  background-color: #aadfe6;
+}
+
+.img-lb {
+  border: 1px solid #315449;
+}
+
+.lb-card-body {
+  margin-top: 5px;
+  padding: 10px;
+}
+
+.lb-ul-img {
   list-style: none;
+  padding-left: 5px;
+  margin-top: 8px;
+}
+.lb-ul-img li {
+  font-size: 12px;
+}
+
+.prayer-main {
+  background-color: #69f0c5;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100px;
+  width: 100%;
+}
+
+.py-title {
+  padding: 30px;
+  text-align: center;
+}
+
+.py-form {
+  margin-top: 13px;
+  padding: 20px;
+  margin-bottom: 20px;
+  border: 1px solid #cac8c8;
+  border-radius: 5px;
+  -webkit-box-shadow: 5px 5px 18px 5px #cac8c8;
+          box-shadow: 5px 5px 18px 5px #cac8c8;
+}
+.py-form h3 {
+  font-family: "Source Serif Pro", serif;
+  font-weight: bold;
+  font-size: 30px;
+  padding: 3px;
+  color: #ef4b4c;
+  text-shadow: 2px 1px 1px #315449;
+}
+.py-form p {
+  font-size: 10px;
+  color: #ef4b4c;
+}
+.py-form label {
+  font-size: 13px;
+  font-weight: bold;
+}
+.py-form select {
+  font-size: 13px;
+  font-weight: bold;
+}
+.py-form option {
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.verse-main {
+  background-color: #bbedf4;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100px;
+  width: 100%;
+}
+
+.vs-title {
+  padding: 30px;
+  text-align: center;
+}
+
+.verse-contant {
+  background-size: cover;
+  height: 230px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.img-verse {
+  width: 250px;
+  height: 200px;
+  padding: 1px;
+  border: 2px solid #aadfe6;
+  border-radius: 3px;
+  margin: 15px 18px;
+  background-color: #aadfe6;
+}
+
+.img-verse:hover {
+  -webkit-transition: 1200ms;
+  transition: 1200ms;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.verse-banner {
+  text-align: center;
+}
+
+.vs-card-contant {
+  margin-top: 10px;
+  border-bottom: 2px solid black;
+  padding-bottom: 10px;
+}
+
+.img-vs-card {
+  width: 200px;
+  height: 130px;
+  padding: 1px;
+  border: 2px solid #aadfe6;
+  border-radius: 3px;
+  margin: 5px;
+  background-color: #aadfe6;
+}
+
+.verse-contant-second {
+  background-color: #c4c4c4;
+}
+
+.scroll-section {
+  max-height: 200px;
+  overflow-y: auto;
 }
