--- a/public/fonts.scss
+++ b/public/fonts.scss
@@ -45,6 +45,8 @@
     font-weight: bold;
     font-size: 16px;
     color: #e9e9eb;
+    margin-right: 8px;
+    margin-left: 8px;
 
 }
 .l-usr:hover{
