--- a/public/layout.scss
+++ b/public/layout.scss
@@ -64,6 +64,9 @@
     margin-top: 5px;
     color: #e9e9eb;
 }
+.l-li-usr{
+    width: 180px;
+}
 .l-profile{
     font-size: 23px;
     margin-right: 5px;
@@ -281,3 +284,10 @@
     max-height: 200px;
     overflow-y: auto;
   }
+
+.creat-post-main{
+    padding: 10px;
+}
+.verse_post{
+    padding: 10px;
+}
